Fix padding and scrollbars (#54)

--- a/packages/app/src/index.scss
+++ b/packages/app/src/index.scss
@@ -31,3 +31,27 @@ code {
 iframe {
   border: 0;
 }
+
+.idp-content-margins {
+  margin: 10px calc(var(--responsive-grid-margin, 64px) - 3px);
+}
+
+.idp-scrolling-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.idp-scrolling-content {
+  overflow: auto;
+  flex-basis: 100%;
+}
+
+.idp-scrolling-iac-dialog {
+  overflow: auto;
+  max-height: 100%;
+
+  > .idp-content-margins > * {
+    padding: 0;
+  }
+}
